Fix spacing and show more button on page's bottom

--- a/sherlock/media/css/application.css
+++ b/sherlock/media/css/application.css
@@ -275,7 +275,7 @@ body > header {
 
 #footer {
     min-height: 3em;
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
     width: 100%;
